[package]
name = "stake_to_mint"
description = "Created with Anchor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[provider]
cluster = "devnet"
wallet = "~/.config/solana/id_new.json"

[programs.devnet]
stake_to_mint = "BootCCPwrDw4VQorf7UCibk1HSjbWRDRDTWizRPiCyb"

[scripts]
